--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         z-index: 1;
     }
 
-    /* TOP USER AREA */
+    /* TOP USER */
     #topBox {
         position: fixed;
-        top: 35px;     /* Ajustado EXACTO a tu maqueta */
+        top: 30px;
         left: 20px;
         z-index: 5;
     }
@@ -38,11 +38,7 @@
         gap: 8px;
     }
     #kalalIcon {
-        height: 32px;     /* Más grande, como tu ejemplo */
-    }
-    #userName {
-        font-size: 22px;  /* Más pequeño, como pediste */
-        font-weight: 600;
+        height: 46px;
     }
 
     /* VIEWERS ROW */
@@ -54,7 +50,7 @@
         opacity: 0.95;
     }
     #eyeIcon {
-        height: 22px;
+        height: 26px;
     }
     #viewersText {
         font-size: 20px;
@@ -63,10 +59,10 @@
     /* LIVE BADGE */
     #liveBadge {
         position: fixed;
-        top: 35px;
+        top: 30px;
         right: 20px;
         background: #C62828;
-        padding: 8px 20px;
+        padding: 8px 22px;
         border-radius: 16px;
         font-size: 17px;
         font-weight: bold;
@@ -77,7 +73,7 @@
     /* COMMENTS */
     #commentsBox {
         position: fixed;
-        bottom: 150px;
+        bottom: 140px;
         left: 20px;
         width: 80%;
         z-index: 5;
@@ -98,7 +94,7 @@
         z-index: 5;
         display: flex;
         justify-content: center;
-        gap: 80px;
+        gap: 60px;
         align-items: center;
     }
     .btn {
@@ -106,12 +102,9 @@
         border: none;
         padding: 0;
     }
-    .iconImg {
-        height: 48px;   /* Proporción real usuario */
-    }
-    #recIcon { height: 46px; }
-    #camIcon { height: 50px; }
-    #heartIcon { height: 48px; }
+    #recIcon { height: 70px; }
+    #camIcon { height: 70px; }
+    #heartIcon { height: 70px; }
 </style>
 </head>
 
@@ -124,7 +117,6 @@
 <div id="topBox">
     <div id="userRow">
         <img id="kalalIcon" src="icons/KALAL.png">
-        <div id="userName">KALAL_Y</div>
     </div>
 
     <div id="viewersRow">
@@ -142,148 +134,20 @@
 <!-- BOTTOM ICONS -->
 <div id="bottomBar">
     <button id="recBtn" class="btn">
-        <img id="recIcon" class="iconImg" src="icons/REC.png">
+        <img id="recIcon" src="icons/REC.png">
     </button>
 
     <button id="camBtn" class="btn">
-        <img id="camIcon" class="iconImg" src="icons/CAM.png">
+        <img id="camIcon" src="icons/CAM.png">
     </button>
 
     <button id="likeBtn" class="btn">
-        <img id="heartIcon" class="iconImg" src="icons/HEART.png">
+        <img id="heartIcon" src="icons/HEART.png">
     </button>
 </div>
 
-<script>
-/* ==========================================================
-   CAMERA
-   ========================================================== */
-let stream = null;
-let usingFront = false;
-
-async function startCamera() {
-    if (stream) stream.getTracks().forEach(t => t.stop());
-
-    stream = await navigator.mediaDevices.getUserMedia({
-        video: {
-            facingMode: usingFront ? "user" : "environment",
-            width: { ideal: 1920 },
-            height: { ideal: 1080 }
-        },
-        audio: {
-            echoCancellation: true,
-            noiseSuppression: true
-        }
-    });
-
-    video.srcObject = stream;
-}
-startCamera();
-
-document.getElementById("camBtn").onclick = () => {
-    usingFront = !usingFront;
-    startCamera();
-};
-
-/* ==========================================================
-   VIEWERS AUTO INCREASE
-   ========================================================== */
-let viewers = 50604;
-setInterval(() => {
-    viewers = Math.floor(viewers * 1.015);
-    document.getElementById("viewersText").textContent =
-        viewers.toLocaleString() + " viewers";
-}, 2000);
-
-/* ==========================================================
-   COMMENTS
-   ========================================================== */
-const names = ["فهد", "سيف", "كريم", "نور", "مروان", "آدم", "ليلى", "سارة", "علي", "ياسين"];
-const msgs = ["جيد جدًا", "أحسنت", "أداء ممتاز", "جميل جدًا", "استمر", "رائع"];
-
-function randomComment() {
-    const name = names[Math.floor(Math.random() * names.length)];
-    const msg = msgs[Math.floor(Math.random() * msgs.length)];
-
-    // Solo algunos llevan emoji
-    const maybeEmoji = Math.random() < 0.45 ? (Math.random() < 0.5 ? " 👍" : " 🔥") : "";
-
-    return `${name}: ${msg}${maybeEmoji}`;
-}
-
-function addComment() {
-    const div = document.createElement("div");
-    div.textContent = randomComment();
-    commentsBox.appendChild(div);
-
-    if (commentsBox.children.length > 5) {
-        commentsBox.removeChild(commentsBox.children[0]);
-    }
-}
-
-/* Más lento: cada ~3.5 s */
-setInterval(addComment, 3500);
-
-/* ==========================================================
-   RECORD
-   ========================================================== */
-let recorder = null;
-let chunks = [];
-let recording = false;
-let blink = true;
-
-recBtn.onclick = () => {
-    if (!recording) startRecording();
-    else stopRecording();
-};
-
-function blinkLive() {
-    if (!recording) return;
-    liveBadge.style.display = blink ? "block" : "none";
-    blink = !blink;
-    setTimeout(blinkLive, 900);  // parpadeo lento
-}
-
-function startRecording() {
-    recording = true;
-    liveBadge.style.display = "block";
-
-    const canvas = new OffscreenCanvas(video.videoWidth, video.videoHeight);
-    const ctx = canvas.getContext("2d");
-
-    function drawFrame() {
-        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-        requestAnimationFrame(drawFrame);
-    }
-    drawFrame();
-
-    const streamCanvas = canvas.captureStream(30);
-
-    recorder = new MediaRecorder(streamCanvas, { mimeType: "video/webm" });
-    chunks = [];
-
-    recorder.ondataavailable = e => { if (e.data.size > 0) chunks.push(e.data); };
-
-    recorder.onstop = () => {
-        const blob = new Blob(chunks, { type: "video/webm" });
-        const url = URL.createObjectURL(blob);
-        const a = document.createElement("a");
-        a.href = url;
-        a.download = "live.mp4";
-        a.click();
-        URL.revokeObjectURL(url);
-    };
-
-    recorder.start();
-    blinkLive();
-}
-
-function stopRecording() {
-    recording = false;
-    liveBadge.style.display = "none";
-    recorder.stop();
-}
-</script>
+<!-- LOAD SCRIPT -->
+<script src="script.js"></script>
 
 </body>
 </html>
