--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live Stream</title>
 
-    <!-- CSS CORRECTO -->
     <link rel="stylesheet" href="style.css">
-
-    <!-- JS CORRECTO -->
     <script src="script.js" defer></script>
 </head>
 
@@ -17,28 +14,22 @@
     <!-- VIDEO -->
     <video id="video" autoplay playsinline muted></video>
 
-    <!-- STATUS BAR -->
-    <div id="status-bar">
-        <span id="clock">00:00</span>
-        <span>🟢</span>
-    </div>
-
-    <!-- ICONO USUARIO -->
+    <!-- ICONO USUARIO (arriba izquierda) -->
     <img id="user-icon" src="icons/KALAL.png">
 
-    <!-- LIVE STREAMING -->
+    <!-- BADGE LIVE STREAMING (arriba derecha) -->
     <img id="live-badge" src="icons/LIVE.png">
 
-    <!-- VIEWERS -->
+    <!-- VIEWERS (arriba izquierda debajo del usuario) -->
     <div id="viewers-box">
         <img id="eye-icon" src="icons/EYE.png">
         <span id="viewers-count">50,000 viewers</span>
     </div>
 
-    <!-- COMENTARIOS -->
+    <!-- COMENTARIOS (esquina inferior izquierda) -->
     <div id="comments"></div>
 
-    <!-- ICONOS ABAJO -->
+    <!-- ICONOS INFERIORES -->
     <div id="bottom-icons">
         <img id="rec-btn" class="bottom-btn" src="icons/REC.png">
         <img id="cam-btn" class="bottom-btn" src="icons/CAM.png">
