Update user section comment and image attributes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
     <video id="camera" autoplay playsinline></video>
 
-    <!-- USER -->
+    <!-- USER (solo icono) -->
     <div id="user-box">
-        <img src="icons/KALAL.png">
-        <div id="username">KALAL_Y</div>
+        <img src="icons/KALAL.png" id="user-icon">
     </div>
 
     <!-- VIEWERS -->
