Update comments for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
 <body>
 
+    <!-- VIDEO ALWAYS ON TOP -->
     <video id="camera" autoplay playsinline></video>
 
-    <!-- USER (solo icono) -->
+    <!-- USER (solo icono, ahora MUY grande) -->
     <div id="user-box">
         <img src="icons/KALAL.png" id="user-icon">
     </div>
@@ -29,7 +30,7 @@
     <!-- COMMENTS -->
     <div id="comments"></div>
 
-    <!-- CONTROLS BOTTOM -->
+    <!-- BOTTOM CONTROLS -->
     <div class="controls">
         <div class="control-btn" id="rec-btn"><img src="icons/REC.png"></div>
         <div class="control-btn" id="cam-btn"><img src="icons/CAM.png"></div>
