Update index.html with versioning for assets

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>KALAL_Y Stream</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css?v=345">
 </head>
 
 <body>
 
-    <!-- VIDEO ALWAYS ON TOP -->
-    <video id="camera" autoplay playsinline></video>
+    <!-- CAMERA (muted to avoid echo) -->
+    <video id="camera" autoplay playsinline muted></video>
 
-    <!-- USER (solo icono, ahora MUY grande) -->
+    <!-- USER ICON (ONLY ICON, BIG) -->
     <div id="user-box">
         <img src="icons/KALAL.png" id="user-icon">
     </div>
@@ -24,7 +24,7 @@
         <div class="viewers-label">viewers</div>
     </div>
 
-    <!-- LIVE STREAMING BADGE -->
+    <!-- LIVE STREAMING -->
     <div id="live-badge">LIVE STREAMING</div>
 
     <!-- COMMENTS -->
@@ -37,6 +37,6 @@
         <div class="control-btn" id="heart-btn"><img src="icons/HEART.png"></div>
     </div>
 
-<script src="script.js"></script>
+<script src="script.js?v=345"></script>
 </body>
 </html>
