Update stylesheet and script versioning in HTML

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>KALAL_Y Stream</title>
-<link rel="stylesheet" href="style.css?v=345">
+<link rel="stylesheet" href="style.css?v=500">
 </head>
 
 <body>
 
-    <!-- CAMERA (muted to avoid echo) -->
     <video id="camera" autoplay playsinline muted></video>
 
-    <!-- USER ICON (ONLY ICON, BIG) -->
+    <!-- USER ICON -->
     <div id="user-box">
         <img src="icons/KALAL.png" id="user-icon">
     </div>
@@ -30,13 +29,13 @@
     <!-- COMMENTS -->
     <div id="comments"></div>
 
-    <!-- BOTTOM CONTROLS -->
+    <!-- CONTROLS -->
     <div class="controls">
         <div class="control-btn" id="rec-btn"><img src="icons/REC.png"></div>
         <div class="control-btn" id="cam-btn"><img src="icons/CAM.png"></div>
         <div class="control-btn" id="heart-btn"><img src="icons/HEART.png"></div>
     </div>
 
-<script src="script.js?v=345"></script>
+<script src="script.js?v=500"></script>
 </body>
 </html>
