--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Streaming</title>
-
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>KALAL Stream</title>
+    <link rel="stylesheet" href="style.css?v=700">
 </head>
+
 <body>
 
-    <!-- VIDEO -->
-    <video id="video" autoplay playsinline></video>
+    <!-- CAMERA -->
+    <video id="video" autoplay playsinline muted></video>
 
-    <!-- TOP BAR -->
-    <div id="top-left">
-        <img id="userIcon" src="icons/KALAL.png" />
-        <div id="stats">
-            <div id="viewersLine">
-                <img id="eyeIcon" src="icons/EYE.png">
-                <span id="viewersText"><span id="viewersNumber">50,000</span> viewers</span>
-            </div>
-        </div>
+    <!-- USER ICON -->
+    <div id="user-box">
+        <img id="userIcon" src="icons/KALAL.png">
     </div>
 
+    <!-- VIEWERS -->
+    <div id="viewers-box">
+        <img id="eyeIcon" src="icons/EYE.png">
+        <span id="viewersNumber">50,000</span>
+        <span id="viewersLabel">viewers</span>
+    </div>
+
+    <!-- LIVE STREAMING (HIDDEN BY DEFAULT) -->
     <div id="liveContainer">
-        <img src="icons/LIVE.png" id="liveIcon">
+        <img id="liveIcon" src="icons/LIVE.png">
     </div>
 
     <!-- COMMENTS -->
@@ -37,6 +39,6 @@
         <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
     </div>
 
-    <script src="script.js"></script>
+<script src="script.js?v=700"></script>
 </body>
 </html>
