--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KALAL Stream</title>
-    <link rel="stylesheet" href="style.css?v=700">
+    <link rel="stylesheet" href="style.css?v=900">
 </head>
 
 <body>
@@ -20,11 +20,11 @@
     <!-- VIEWERS -->
     <div id="viewers-box">
         <img id="eyeIcon" src="icons/EYE.png">
-        <span id="viewersNumber">50,000</span>
+        <span id="viewersNumber">51,063</span>
         <span id="viewersLabel">viewers</span>
     </div>
 
-    <!-- LIVE STREAMING (HIDDEN BY DEFAULT) -->
+    <!-- LIVE STREAMING BADGE -->
     <div id="liveContainer">
         <img id="liveIcon" src="icons/LIVE.png">
     </div>
@@ -39,6 +39,6 @@
         <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
     </div>
 
-<script src="script.js?v=700"></script>
+<script src="script.js?v=900"></script>
 </body>
 </html>
