--- a/index.html
+++ b/index.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KALAL Stream</title>
-    <link rel="stylesheet" href="style.css?v=900">
+    <link rel="stylesheet" href="style.css?v=910">
 </head>
 
 <body>
 
-    <!-- CAMERA -->
+    <!-- Cámara -->
     <video id="video" autoplay playsinline muted></video>
 
-    <!-- USER ICON -->
+    <!-- Usuario -->
     <div id="user-box">
         <img id="userIcon" src="icons/KALAL.png">
     </div>
 
-    <!-- VIEWERS -->
+    <!-- Viewers -->
     <div id="viewers-box">
         <img id="eyeIcon" src="icons/EYE.png">
-        <span id="viewersNumber">51,063</span>
+        <span id="viewersNumber">51,824</span>
         <span id="viewersLabel">viewers</span>
     </div>
 
-    <!-- LIVE STREAMING BADGE -->
+    <!-- Live Streaming -->
     <div id="liveContainer">
         <img id="liveIcon" src="icons/LIVE.png">
     </div>
 
-    <!-- COMMENTS -->
+    <!-- Comentarios -->
     <div id="comments"></div>
 
-    <!-- BOTTOM ICONS -->
+    <!-- Controles inferiores -->
     <div id="bottomIcons">
         <img class="btnIcon" id="recBtn" src="icons/REC.png">
         <img class="btnIcon" id="camBtn" src="icons/CAM.png">
         <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
     </div>
 
-<script src="script.js?v=900"></script>
+<script src="script.js?v=910"></script>
 </body>
 </html>
