--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
     </div>
 
-<script src="script.js?v=910"></script>
+<script src="script.js?v=910" defer></script>
 </body>
 </html>
