--- a/index.html
+++ b/index.html
@@ -1,44 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KALAL Stream</title>
-    <link rel="stylesheet" href="style.css?v=910">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
+  <title>Live Overlay - Demo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+  <div id="app">
+    <!-- Hidden real <video> that receives the camera stream -->
+    <video id="camVideo" autoplay playsinline muted></video>
 
-    <!-- Cámara -->
-    <video id="video" autoplay playsinline muted></video>
+    <!-- Visible canvas: we draw the video + overlays here and record canvas -->
+    <canvas id="overlayCanvas"></canvas>
 
-    <!-- Usuario -->
-    <div id="user-box">
-        <img id="userIcon" src="icons/KALAL.png">
+    <!-- TOP LEFT OVERLAY: user icon + username -->
+    <div id="top-left">
+      <img id="icon-kalal" src="icons/KALAL.png" alt="user" />
+      <!-- If user decided icon already contains name, we show only icon. Keep span in case -->
+      <span id="kalal-name">KALAL_Y</span>
+      <div id="viewers-row">
+        <img id="eye-icon" src="icons/EYE.png" alt="eye" />
+        <span id="viewers-count">50,000 viewers</span>
+      </div>
     </div>
 
-    <!-- Viewers -->
-    <div id="viewers-box">
-        <img id="eyeIcon" src="icons/EYE.png">
-        <span id="viewersNumber">51,824</span>
-        <span id="viewersLabel">viewers</span>
+    <!-- TOP RIGHT: LIVE -->
+    <div id="top-right">
+      <img id="live-icon-img" src="icons/LIVE.png" alt="LIVE">
     </div>
 
-    <!-- Live Streaming -->
-    <div id="liveContainer">
-        <img id="liveIcon" src="icons/LIVE.png">
+    <!-- COMMENTS area is drawn on canvas but keep a small helper for accessibility -->
+    <div id="comments-helper" aria-hidden="true"></div>
+
+    <!-- BOTTOM CENTER CONTROLS (icons) -->
+    <div id="bottom-controls">
+      <button id="btn-rec" class="control-btn">
+        <img src="icons/REC.png" alt="rec">
+      </button>
+
+      <button id="btn-switch" class="control-btn">
+        <img src="icons/CAM.png" alt="switch cam">
+      </button>
+
+      <button id="btn-heart" class="control-btn">
+        <img src="icons/HEART.png" alt="heart">
+      </button>
     </div>
 
-    <!-- Comentarios -->
-    <div id="comments"></div>
+    <!-- hidden anchor used for download -->
+    <a id="downloadAnchor" style="display:none;"></a>
+  </div>
 
-    <!-- Controles inferiores -->
-    <div id="bottomIcons">
-        <img class="btnIcon" id="recBtn" src="icons/REC.png">
-        <img class="btnIcon" id="camBtn" src="icons/CAM.png">
-        <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
-    </div>
-
-<script src="script.js?v=910" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
